versioned_docs/version-1.22/reference/okteto-cli.mdx
---
title: Okteto CLI
description: The Okteto Command Line Interface is a unified tool to manage your development environments
sidebar_label: Okteto CLI
id: okteto-cli
---

The Okteto Command Line Interface is a unified tool to manage your development environments.

## Synopsis

```console
$ okteto [options] <command> <subcommand> [parameters]
```

Use `okteto command --help` for information on a specific command. The synopsis for each command shows its parameters and their usage. Optional parameters are shown in square brackets.

| Options      |           Values           |
| :----------- | :------------------------: |
| _--loglevel_ | _debug, info, warn, error_ |

The amount of information outputted (defaults to _warn_).

## Advanced configuration

It is possible to handle timeouts from the client side when communicating with the buildkit daemon through the Okteto CLI. To do so, the following environment variables can be modified:

- `OKTETO_KEEPALIVE_CLIENT_TIME_MS`: After this duration of time, if the client doesn't see any activity it will ping the server to see if the transport is still alive. If set below 10s, a minimum value of 10s will be used (default value is infinity.)
- `OKTETO_KEEPALIVE_CLIENT_TIMEOUT_MS`: After sending a keepalive ping, the client waits for this duration of time and if no activity is seen even after that the connection is closed. (default value is 20 seconds.)
- `OKTETO_KEEPALIVE_CLIENT_PERMIT_WITHOUT_STREAM`: If `true`, the client sends keepalive pings even with no active RPCs. If `false`, when there are no active RPCs, Time and Timeout will be ignored and no keepalive pings will be sent (defaults to `false`.)

## Available commands

### analytics

Enable / Disable analytics collection. Analytics are enabled by default

```console
$ okteto analytics [parameters]
```

| Options     | Description                  |
| :---------- | :--------------------------- |
| _--disable_ | Disables analytic collection |

Okteto only collects information to help us understand how our users interact with the product. We don't collect any personally identifiable information.

When you use the okteto CLI, the following information is collected:

- The name of the action
- A timestamp of when it was run
- Your version of the CLI
- Your OS
- An anonymous machine ID (we use https://github.com/denisbrodbeck/machineid for this)
- A user ID if you are currently logged in to Okteto
- An action ID (to correlate multiple actions performed during a command's execution)

Please reach [out to us](mailto://hello@okteto.com) if you have any questions or concerns about the information collected.

### build

Build and push the images defined in the `build` section of your Okteto Manifest:

```console
$ okteto build [service...]
```

If your [okteto context](reference/okteto-cli.mdx#context) points to an Okteto URL, images are built using the [Okteto Build Service](core/build-service.mdx).
Otherwise, images are built using your local Docker daemon. If you want to use another BuildKit instance, set the variable `BUILDKIT_HOST` to point to its address, using the format `HOST:PORT`.

The following flags can be used (very similar to `docker build`):

| Options          |   Type   | Description                                                                | Default     |
| :--------------- | :------: | :------------------------------------------------------------------------- | :---------- |
| _--file_         | (string) | The path to the okteto manifest                                            | |
| _--no-cache_     |  (bool)  | Do not use cache when building the image                                   | `false` |
| _--secret_       |  (list)  | Secret files exposed to the build. Format: `id=mysecret,src=/local/secret` | |
| _--export-cache_ | (string) | Image tag for exported cache when build (optional)                         | |
| _--cache-from_   |  (list)  | List of cache source images (optional)                                     | |
| _--platform_     | (string) | Specify which platform to build the container image for (optional)         | |

> You can also use the `-f` to point to a Dockerfile. In this mode, `okteto build` will ignore your Okteto manifest, and directly build the image defined in the Dockerfile. Use this to build images that are not defined on your [Okteto manifest](https://www.okteto.com/docs/reference/okteto-manifest.mdx).

With `okteto build --platform` you can specify the platform (or architecture) for which you'd like to build the container images. For example, you could use a multiplatform image and the `okteto build --platform` command to deploy your web application on a Kubernetes cluster that consists of nodes running on both x86-64 and ARMv7 architectures.
By using the multiplatform images built using this method, you can deploy the same images across the cluster without worrying about the underlying hardware differences.

Let's consider an example where you have a Node.js application that you want to build and deploy on both x86_64 and ARM-based platforms. You have a Dockerfile in your project directory that defines the build process. Here's
how Okteto CLI can help you build multiplatform images for your application:

1. Building the image for x86_64 architecture:

```console
okteto build -f Dockerfile -t myapp:latest --platform linux/amd64
```

2. Building the image for ARMv7 architecture:

```console
okteto build -f Dockerfile -t myapp:latest --platform linux/arm/v7
```

3. Building a multiarchitectural image:

```console
okteto build -f Dockerfile -t myapp:latest --platform linux/amd64,linux/arm/v7
```

This command builds a multi-architecture Docker image named `myapp` with the latest tag for both x86_64 and ARM platforms.

By using these commands, you can easily build the application image for different platforms without needing to maintain separate Dockerfiles or perform manual modifications.
This is particularly useful when you want to deploy your application to heterogeneous environments where you have both x86_64 and ARM-based devices, such as a mixed-cluster Kubernetes setup.

### context

Set the default context.

A context is a group of cluster access parameters. Each context contains a Kubernetes cluster, a user, and a namespace.
The current context is the default cluster/namespace for any Okteto CLI command.

```console
$ okteto context
```

This will prompt you to select one of your existing contexts or to create a new one:

```console
A context defines the default cluster/namespace for any Okteto CLI command.
Select the context you want to use:
Use the arrow keys to navigate: ↓ ↑ → ←
  ▸ https://okteto.example.com *
    minikube

    Create new context
```

| Options                                  |   Type   | Description                                                                                                     |
| :--------------------------------------- | :------: | :-------------------------------------------------------------------------------------------------------------- |
| _--token_                                | (string) | API token for authentication. Use this when scripting or if you don't want to use browser-based authentication. |
| <em className="no-wrap">--namespace</em> | (string) | Namespace of your okteto context                                                                               |
| _--builder_                              | (string) | URL of the builder service                                                                                      |

When you run `okteto context`, an account will be created for your own `URL` if it's the first time you set the context in.
The CLI will exchange an authorization token with `URL` and save your API token and Okteto certificates information under `$HOME/.okteto/`.


:::tip

In your CI/CD you should use environment variables to specify your Okteto Context, Namespace and token. Check out [Environment Variables](core/credentials/environment-variables.mdx) to know more.

:::

Available subcommands:

#### delete

Delete one or more contexts.

For example, to delete the Okteto context, run:

```console
$ okteto context delete https://okteto.example.com https://okteto2.example.com
```

#### list

List available contexts.

```console
$ okteto context list
```

```console
Name                               Namespace    Builder                                   Registry
https://okteto.example.com *       cindy        tcp://buildkit.okteto.example.com:1234    registry.okteto.example.com
minikube                           default      docker                                    -
```

#### show

Print the current context.

```console
$ okteto context show
```

| Options           |   Type   | Description                           | Default     |
| ----------------- | :------: | ------------------------------------- | :---------- |
| _--include-token_ |  (bool)  | Include the token in the output       | `false` |
| _--output_        | (string) | Output format. One of: `json`, `yaml` | `json` |

```console
{
  "name": "https://okteto.example.com",
  "token": "REDACTED", # only printed using flag: --include-token
  "namespace": "cindy",
  "builder": "tcp://buildkit.okteto.example.com:1234",
  "registry": "registry.okteto.example.com",
  "isOkteto": true
}
```

#### use

Set the default context.

```console
$ okteto context use
```

This will prompt you to select one of your existing contexts or to create a new one.

You can also specify an Okteto URL:

```console
$ okteto context use https://okteto.example.com
```

```console
 ✓  Using context cindy @ okteto.example.com
```

Or a Kubernetes context:

```console
$ okteto context use minikube
```

```console
 ✓  Using context default @ minikube
```

### deploy

Deploy your development environment by running the commands specified in the `deploy` section of your okteto manifest.
If the images in the `build` section don't exist, `okteto deploy` automatically builds and pushes all these images.
If the repositories in the `dependencies` section haven't been deployed yet, `okteto deploy` deploys these dependencies automatically.

The command is executed relative to the path where the manifest is located. This means, that if the manifest is at any subfolder, the pipeline will use the context of the subfolder where the manifest is defined.

```console
$ okteto deploy
```

##### Options

| Options                                     |    Type    | Description                                                                                                                                                                                                                                                         | Default     |
| :------------------------------------------ | :--------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :---------- |
| _--build_                                   |   (bool)   | Force build of images in the `build` section                                                                                                                                                                                                                        | `false` |
| _--dependencies_                            |   (bool)   | Force deployment of repositories in the `dependencies` section                                                                                                                                                                                                      | `false` |
| _--file_                                    |  (string)  | The path to the okteto manifest                                                                                                                                                                                                                                     | "okteto.yaml" |
| _--help_                                    |   (bool)   | Help for the deploy command                                                                                                                                                                                                                                        | `false` |
| _--name_                                    |  (string)  | The name of the development environment                                                                                                                                                                                                                             | The repo/folder name |
| _--namespace_                               |  (string)  | Overwrites the namespace where the development environment is deployed                                                                                                                                                                                              | |
| _--timeout_                                 | (duration) | The duration to wait for the development environment deployment to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h                                                                                                                     | 5m0s |
| _--var_                                     |   (list)   | Set a pipeline variable (can be set more than once)                                                                                                                                                                                                                 | |
| _--wait_                                    |   (bool)   | Wait until the pipeline finishes                                                                                                                                                                                                                                    | `false` |
| _--no-bash_                                 |   (bool)   | Execute the command using the container's default shell instead of bash                                                                                                                                                                                             | `false` |
| _--remote_                                  |   (bool)   | Run the deploy commands in your Okteto cluster. Okteto will connect your local SSH agent with the cluster. For example, this lets you clone any private repository as part of your manifest execution as long as your local agent has the proper ssh key configured | |

> Executed commands will be executed using bash unless the `--no-bash` flag has been specified.

### destroy

Destroy your development environment.
It automatically destroys all the Kubernetes resources created by [okteto deploy](reference/okteto-cli.mdx#deploy).
If you need to destroy external resources (like s3 buckets or other Cloud resources), use the [destroy](reference/okteto-manifest.mdx#destroy-string-optional) section of the Okteto Manifest.

```console
$ okteto destroy
```

The `okteto destroy` command will only destroy resources matching the specified Development Environment name. By default, this is the name of the folder, but you can specify the [name in the Okteto Manifest](reference/okteto-manifest.mdx#name-string-optional), or with the --name flag. In a monorepo scenario, where you might have several manifests, you need to specify the correct manifest to destroy the specific development environment. This ensures that the appropriate destroy commands, as defined in your Okteto manifest, are executed within a particular scope.

This way, executing the `okteto destroy` command on one Development Environment will not delete the other. For example, if you have two Development Environments, `dev1` and `dev2`, and you run `okteto destroy` for dev1, it will only destroy the resources for dev1 and leave dev2 intact.

You can use `okteto destroy --all` to delete all Development Environments.

##### Options

| Options                                  |   Type   | Description                                                                                                                                                                                                                                                         | Default     |
| :--------------------------------------- | :------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | :---------- |
| _--all_                                  |  (bool)  | Destroy everything, including resources annotated with `dev.okteto.com/policy: keep`                                                                                                                                                                                | `false` |
| _--context_                              | (string) | Context where the development environment was deployed                                                                                                                                                                                                              | Your existing context |
| _--dependencies_                         |  (bool)  | Force destroy repositories in the `dependencies` section                                                                                                                                                                                                            | `false` |
| _--file_                                 | (string) | The path to the okteto manifest                                                                                                                                                                                                                                     | "okteto.yaml" |
| _--force-destroy_                        |  (bool)  | Forces the development environment to be destroyed even if there is an error executing the custom destroy commands defined in the manifest                                                                                                                          | `false` |
| _--help_                                 |  (bool)  | Help for the destroy command                                                                                                                                                                                                                                        | `false` |
| _--name_                                 | (string) | The name of the development environment                                                                                                                                                                                                                             | The folder name |
| _--namespace_                            | (string) | Overwrites the namespace where the development environment is deployed                                                                                                                                                                                              | |
| _--timeout_                              | (string) | The duration to wait for the development environment to be destroyed. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h                                                                                                                            | 5m0s |
| _--volumes_                              |  (bool)  | Destroy the persistent volumes created by the development environment                                                                                                                                                                                               | `false` |
| _--wait_                                 |  (bool)  | Wait until the development environment is destroyed                                                                                                                                                                                                                 | `false` |
| _--no-bash_                              |  (bool)  | Execute the command using the container's default shell instead of bash                                                                                                                                                                                             | `false` |
| _--remote_                               |  (bool)  | Run the deploy commands in your Okteto cluster. Okteto will connect your local SSH agent with the cluster. For example, this lets you clone any private repository as part of your manifest execution as long as your local agent has the proper ssh key configured | |

> Executed commands will be executed using bash unless the `--no-bash` flag has been specified.

> Resources annotated with `dev.okteto.com/policy: keep` will not be affected by the destroy action.

### doctor

Generates a doctor file with the okteto logs for a given development container:

```console
$ okteto doctor [devName]
```

The `doctor` command should be run from the folder where you ran `okteto up`.

The doctor file contains:

- The `okteto.log`
- The syncthing logs of your development container
- A summary of your development container manifest
- A metadata file with information about your host machine's OS and architecture

The doctor file is a handy way to collect all the okteto logs. Use it when filing an issue or asking [the Okteto community](http://community.okteto.com) for help.

### down

Deactivates your development container, stops the file synchronization service, and restores your previous deployment configuration for a given development container.

```console
$ okteto down [devName]
```

The `down` command should be run from the same location as `okteto up`.

| Options                                  |   Type   | Description                                                             | Default     |
| :--------------------------------------- | :------: | :---------------------------------------------------------------------- | :---------- |
| _--file_                                 | (string) | The path to the okteto manifest                                         | "okteto.yaml" |
| <em className="no-wrap">--namespace</em> | (string) | The namespace to use                                                    | Current Okteto Namespace |
| <em className="no-wrap">--context</em>   | (string) | The context to use                                                      | Current Okteto Context |
| _--volumes_                              |  (bool)  | Remove persistent volumes where your local folder is synched on remote  | |

### endpoints

List the public endpoints of your development environment.

```console
$ okteto endpoints
```

| Options    |   Type   | Description                           |
| :--------- | :------: | :------------------------------------ |
| _--output_ | (string) | Output format. One of: ['json', 'md'] |

### exec

Executes the `COMMAND` in your development container.
The command will fail if there's no active development container corresponding to the current folder.

```console
$ okteto exec [devName] -- COMMAND
```

The `exec` command should be run from the same location as `okteto up`.

| Options                                  |   Type   | Description                          | Default     |
| :--------------------------------------- | :------: | :----------------------------------- | :---------- |
| _--file_                                 | (string) | The path to the okteto manifest      | "okteto.yaml" |
| <em className="no-wrap">--namespace</em> | (string) | The namespace to use                 | Current Okteto Namespace |
| <em className="no-wrap">--context</em>   | (string) | The context to use                   | Current Okteto Context |

### help

Displays the full help

```console
$ okteto help
```

### init

This command walks you through creating your Okteto Manifest.
It only covers the most common items, and tries to guess sensible defaults.
See the [Okteto Manifest documentation](reference/okteto-manifest.mdx) for more details about the Okteto Manifest.

```console
$ okteto init
```

| Options                                  |   Type    | Description                                                      | Default    |
| :--------------------------------------- | :-------: | :--------------------------------------------------------------- | :---------- |
| _--file_                                 | (string)  | The path to the okteto manifest to create                        | "okteto.yaml" |
| _--replace_                              | (string)  | Replace an existing okteto manifest                              | `false` |
| <em className="no-wrap">--namespace</em> | (string)  | The namespace to use                                             | Current Okteto Namespace |
| <em className="no-wrap">--context</em>   | (string)  | The context to use                                               | Current Okteto Context |
| _-v1_                                    | (boolean) | Use the [okteto init v1](reference/okteto-cli.mdx#init) version  | `false ` |

### kubeconfig

Download credentials for the Kubernetes cluster selected via `okteto context`.

```console
$ okteto kubeconfig
```

```console
 i  Updated kubernetes context 'okteto_example_com/cindy' in '/Users/cindy/.kube/config'
```

> Starting with the Okteto CLI `2.20`, the Kubeconfig file generated by Okteto uses a [credential plugin](https://kubernetes.io/docs/reference/access-authn-authz/authentication/#client-go-credential-plugins) to get the Kubernetes credentials from your Okteto instance. This functionality requires the okteto CLI to be in your PATH. It is also required that the Okteto CLI is connected to your Okteto instance through `okteto context use <url>`
>
> Prior to the implementation of the credential plugins, kubeconfigs were generated using secret-based service account tokens that have no expiration. You can enable the previous behavior of static tokens by setting the environment variable `OKTETO_USE_STATIC_KUBETOKEN` to `true` before running `okteto kubeconfig`. Be aware that using those static tokens are not recommended by Kubernetes and you will receive warnings in your `kubectl` output starting with kubernetes version `1.27`.

### namespace

Configure the current namespace of the okteto context.

```console
$ okteto namespace
```

This will prompt you to select one of your existing namespaces:

```console
Select the namespace you want to use:
Use the arrow keys to navigate: ↓ ↑ → ←
  ▸ cindy

    Create new namespace
```

```console
 ✓  Using context cindy @ okteto.example.com
```

#### create

Create a namespace. By default the command will switch to the new namespace, add `--use=false` to create the namespace, and it will keep the current namespace active.

> This command is only available in clusters that have Okteto installed.

```console
$ okteto namespace create test-cindy
```

```console
 ✓  Namespace 'test-cindy' created
 ✓  Using context test-cindy @ okteto.example.com
```

#### delete

Delete a namespace. If the manifest includes `destroy` commands, they will be executed as part of this command. By default, it deletes the current okteto namespace.

> This command is only available in clusters that have Okteto installed.

```console
$ okteto namespace delete test-cindy
```

```console
 ✓  Namespace 'test-cindy' deleted
```

#### list

List existing namespace.

> This command is only available in clusters that have Okteto installed.

```console
$ okteto namespace list
```

```console
Namespace       Status
demos-cindy     Active
cindy *         Active
```

#### use

Set the default okteto namespace.

```console
$ okteto namespace use cindy
```

```console
 ✓  Using context cindy @ okteto.example.com
```

#### sleep

Sleeps an okteto namespace. By default, it sleeps the current okteto namespace.

```console
$ okteto namespace sleep [name]
```

```console
i  Using test-cindy @ okteto.example.com as context
✓  Namespace 'test-cindy' is sleeping
```

If you'd like to sleep a namespace other than the current one, you can provide that namespace name as an argument to the command.

#### wake

Wakes an okteto namespace. By default, it wakes the current okteto namespace.

```console
$ okteto namespace wake [name]
```

```console
i  Using test-cindy @ okteto.example.com as context
✓  Namespace 'test-cindy' is awake now
```

If you'd like to wake a namespace other than the current one, you can provide that namespace name as an argument to the command.

### pipeline

Pipeline management commands

```console
$  okteto pipeline [command]
```

Available subcommands:

#### deploy

Runs a job in the cluster that clones your repository and executes [okteto deploy](reference/okteto-cli.mdx#deploy) on it.
This is equivalent to clicking the **Deploy Dev Environment** button on the Okteto UI and selecting a git repository.

```console
$ okteto pipeline deploy
```

You must be [logged in](reference/okteto-cli.mdx#context) to Okteto before running this command.

##### Options

| Options            |    Type    | Description                                                                                                                    | Default     |
| :----------------- | :--------: | :----------------------------------------------------------------------------------------------------------------------------- | :---------- |
| _--branch_         |  (string)  | The branch to deploy                                                                                                           | The main branch |
| _--file_           |  (string)  | The location of the okteto manifest                                                                                            | If not set, the [automatic deployment rules](core/okteto-manifest.mdx) are applied |
| _--name_           |  (string)  | The name of the pipeline                                                                                                       | The folder name |
| _--namespace_      |  (string)  | The Kubernetes namespace to use                                                                                                | Current kube config namespace |
| _--repository_     |  (string)  | The HTTPS url of the repository to deploy (e.g. https://github.com/okteto/movies)                                              | |
| _--skip-if-exists_ |   (bool)   | Skip the pipeline deployment if the pipeline already exists in the namespace                                                   | `false` |
| _--timeout_        | (duration) | The duration to wait for the pipeline to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h          | 5m0s |
| _--var_            |   (list)   | Set a pipeline variable (can be set more than once)                                                                            | | 
| _--wait_           |   (bool)   | Wait until the pipeline finishes                                                                                               | `false` |
| _--label_          |   (list)   | Tag and organize development environments using labels (multiple _--label_ flags accepted)                                     | |
| _--reuse-params_   |   (bool)   | If pipeline exist, reuse same parameters to redeploy)                                                                          | |

#### destroy

Runs a job in the cluster that clones your repository and executes [okteto destroy](reference/okteto-cli.mdx#destroy) on it.
This is equivalent to clicking the **Destroy** button on the Okteto UI.

```console
$ okteto pipeline destroy
```

You must be [logged in](reference/okteto-cli.mdx#context) to Okteto before running this command.

##### Options

| Options       |   Type   | Description                                                                                                                | Default     |
| :------------ | :------: | :------------------------------------------------------------------------------------------------------------------------- | :---------- |
| _--name_      | (string) | The name of the pipeline                                                                                                   | The folder name |
| _--namespace_ | (string) | The Kubernetes namespace to use                                                                                            | Current kube config namespace |
| _--timeout_   | (string) | The duration to wait for the pipeline to be destroyed. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h  | 5m0s |
| _--volumes_   |  (bool)  | Destroy the persistent volumes created by the pipeline                                                                     | `false` |
| _--wait_      |  (bool)  | Wait until the pipeline is destroyed                                                                                       | `false` |

#### list

List all your Okteto development environments in the current namespace.

```console
$ okteto pipeline list
```

Run `okteto pipeline list` to get the status and info of your development environments.

You must be [logged in](reference/okteto-cli.mdx#context) to Okteto before running this command.

| Options       |   Type   | Description                                                                                             | Default     |
| :------------ | :------: | :------------------------------------------------------------------------------------------------------ | :---------- |
| _--label_     |  (list)  | Tag and organize development environments using labels (multiple _--label_ flags accepted)              | |
| _--output_    | (string) | Output format. One of: ['json', 'yaml']                                                                 | |
| _--namespace_ | (string) | The Kubernetes namespace to use to list the development environments                                    | Current kube config namespace |
| _--context_   | (string) | Context where the pipelines to list are deployed                                                        | Current Okteto context |

### preview

[Preview environment](previews/index.mdx) management commands.

> This command is only available in clusters that have Okteto installed.

```console
$  okteto preview [command]
```

#### deploy

Deploy an okteto preview environment.

```console
$ okteto preview deploy [name]
```

Run `okteto preview deploy` to automatically deploy a preview environment for your branch.

You must be [logged in](reference/okteto-cli.mdx#context) to Okteto before running this command.
Only users with [admin access](admin/dashboard.mdx) can deploy a global preview environment.

| Options                                   |    Type    | Description                                                                                                                                                                                                                              | Default     |
| :---------------------------------------- | :--------: | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :---------- |
| _--branch_                                |  (string)  | The branch to deploy                                                                                                                                                                                                                     | Your current branch |
| _--file_                                  |  (string)  | The location of the okteto manifest. If not set, the [automatic deployment](development/deploy/deploy-from-git.mdx) rules will be applied.                                                                                               | |
| _--label_                                 |   (list)   | Tag and organize preview environments using labels (multiple _--label_ flags accepted)                                                                                                                                                   | |
| <em className="no-wrap">--repository</em> |  (string)  | The url of the repository to deploy (e.g. https://github.com/okteto/movies)                                                                                                                                                              | Your current git configuration repo |
| _--scope_                                 |  (string)  | The scope of preview environment to create. Accepted values are ['personal', 'global']. A personal preview environment can only be accessed by its creator, while in a global preview environment all cluster users can access it.       | `personal` |
| _--sourceUrl_                             |  (string)  | The HTTPS url of the pull/merge request to deploy.                                                                                                                                                                                       | |
| _--timeout_                               | (duration) | The duration to wait for the preview deployment to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h                                                                                                          | 5m0s |
| _--var_                                   |   (list)   | Set a preview environment variable (can be set more than once)                                                                                                                                                                           | |
| _--wait_                                  |   (bool)   | Wait until the preview deployment finishes                                                                                                                                                                                               | `false` |

#### destroy

Destroy your okteto preview environment.

```console
$ okteto preview destroy [name]
```

Run `okteto preview destroy` to destroy a given preview environment.

You must be [logged in](reference/okteto-cli.mdx#context) to Okteto before running this command.
Only users with administration privileges can destroy a global preview environment.
If the manifest includes `destroy` commands, they will be executed as part of this command.

| Options  |  Type  | Description                                                 | Default     |
| :------- | :----: | :---------------------------------------------------------- | :---------- |
| _--wait_ | (bool) | Wait until the preview deletion finishes                    | `true`      |

#### endpoints

List the endpoints of a preview environment.

```console
$ okteto preview endpoints [name]
```

You must be [logged in](reference/okteto-cli.mdx#context) to Okteto before running this command.

| Options    |   Type   | Description                     |
| :--------- | :------: | :------------------------------ |
| _--output_ | (string) | Output format. One of: ['json'] |

Output flag can be used to parse the endpoints and add them to your PR with a custom layout.

#### list

List all your okteto preview environments.

```console
$ okteto preview list
```

Run `okteto preview list` to get the status and scope of your preview environments.

You must be [logged in](reference/okteto-cli.mdx#context) to Okteto before running this command.

| Options    |   Type   | Description                                                                            |
| :--------- | :------: | :------------------------------------------------------------------------------------- |
| _--label_  |  (list)  | tag and organize preview environments using labels (multiple _--label_ flags accepted) |
| _--output_ | (string) | Output format. One of: ['json', 'yaml']                                                |

#### sleep

Sleeps a given Okteto preview environment. Only users with admin access or who own the preview environment can take this action.

```console
$ okteto preview sleep [name]
```

More on sleeping resources [here](admin/cleanup.mdx#sleeping-resources).

#### wake

Wakes an Okteto preview environment. You must provide the name of a preview environment as an argument for this command.

```console
$ okteto namespace wake [name]
```

### logs

Fetch the logs of your development environment.

```console
$ okteto logs [serviceName]
```

The `okteto logs` command should be run from the same location than `okteto up`.

The first argument is optional and it's a regex matching the name of the services you want to fetch the logs from.
For example, `okteto logs api` fetches the logs of any service starting with `api`.

| Options        |    Type    | Description                                                                       | Default    |
| :------------- | :--------: | :-------------------------------------------------------------------------------- |:---------- |
| _--all_        | (boolean)  | Fetch logs from the whole namespace                                               | |
| _--exclude_    |  (string)  | Exclude by service name (regular expression)                                      | |
| _--since_      | (duration) | Return logs newer than a relative duration like 5s, 2m, or 3h                     | 48h0m0s |
| _--tail_       |   (int)    | The number of lines from the end of the logs to show                              | 100 |
| _--timestamps_ | (boolean)  | Print timestamps                                                                  | |
| _--file_       |  (string)  | The path to the manifest file                                                     | "okteto.yaml" |
| _--namespace_  |  (string)  | The namespace to use to fetch the logs                                            | Current Okteto namespace |
| _--context_    |  (string)  | The context to use to fetch the logs                                              | |

### restart

Restarts your development pods corresponding to the `services` section of the okteto manifest for a given development container.
This is useful to reload configurations that cannot be hot-reloaded.

```console
$ okteto restart [devName]
```

The `restart` command should be run from the same location than `okteto up`.

| Options       |   Type   | Description                                                     | Default     |
| :------------ | :------: | :-------------------------------------------------------------- | :---------- |
| _--file_      | (string) | The path to the manifest file                                   | "okteto.yaml" |
| _--namespace_ | (string) | The namespace to use                                            | Current Okteto Namespace |
| _--context_   | (string) | The context to use                                              | Current Okteto Context |

### status

Status of the file synchronization process for a given development container:

```console
$ okteto status [devName] --info
```

```console
 i  Local syncthing url: http://localhost:60539
 i  Remote syncthing url: http://localhost:60538
 i  Syncthing username: okteto
 i  Syncthing password: ac0ee34a-b1aa-4a41-bc67-cec3128b6cfd
 ✓  Synchronization status: 100.00%
```

The `status` command should be run from the same location than `okteto up`.

| Options       |   Type   | Description                                                          | Default     |
| :------------ | :------: | :------------------------------------------------------------------- | :---------- |
| _--file_      | (string) | The path to the manifest file                                        | "okteto.yaml" |
| _--namespace_ | (string) | The namespace to use                                                 | Current Okteto Namespace |
| _--context_   | (string) | The context to use                                                   | Current Okteto Context |
| _--info_      |  (bool)  | Show syncthing links for troubleshooting the synchronization service | |
| _--watch_     |  (bool)  | Watch for changes                                                    | |

### up

Activate a development container.
If needed, `okteto up` builds the images and runs the deploy commands defined in your [Okteto Manifest](reference/okteto-manifest.mdx).

```console
$ okteto up [devName]
```

When you run `okteto up`, okteto scales to zero the specified deployment and creates a mirror deployment. The mirror deployment is a copy of the original deployment manifest with the following development-time improvements:

- Okteto overrides the container-level configuration of the original deployment with the values defined in your [okteto manifest](reference/okteto-manifest.mdx). A typical example of this is to replace the production container image with one that contains your development runtime.
- A bidirectional file [synchronization service](reference/file-synchronization.mdx) is started to keep your changes up to date between your local filesystem and your development container.
- Automatic local and remote port forwarding using [SSH](reference/ssh-server.mdx). This allows you to do things like access your cluster services via `localhost` or connect a remote debugger.
- A watcher service to keep the definition of the mirror deployment up to date with original deployment.

It's worth noting that your development deployment inherits the original deployment manifest definition.
Therefore, the development deployment uses the same service account, environment variables, secrets, volumes, sidecars, ... than the original deployment, providing a fully integrated development environment.

> Run [`okteto down`](#down) to restore your original deployment.

| Options       |   Type   | Description                                                                                                            | Default     |
| :------------ | :------: | :--------------------------------------------------------------------------------------------------------------------- | :---------- |
| _--file_      | (string) | The path to the manifest file                                                                                          | "okteto.yaml" |
| _--namespace_ | (string) | The namespace to use                                                                                                   | Current Okteto Namespace |
| _--context_   | (string) | The context to use                                                                                                     | Current Okteto Context |
| _--env_       |  (list)  | Set environment variable in the dev container                                                                          | |
| _--deploy_    |  (bool)  | Force execution of the commands in the `deploy` section of the okteto manifest                                         | `false` |
| _--reset_     |  (bool)  | Resets the file synchronization service. Use it if the file synchronization service stops working.                     | |
| _--command_   |  (list)  | The command to execute in the dev container. This overrides the command specified in the `dev` section of the manifest. For example: `okteto up --command npm --command start` | |

### version

Displays the current installed version

```console
$ okteto version
```

### test

Runs tests using Okteto infrastructure via [Remote Execution](core/remote-execution.mdx#how-remote-execution-works). Optionally, `okteto test` can build and deploys your application if it hasn't yet been deployed and it's required for tests to run (eg: integration test).
All application endpoints are available inside the test exection via the namespaced host. For example, if you deployed an api service on port 8080 it will be accesible at: `http://api.${OKTETO_NAMESPACE}:8080`.

[Dynamic endpoints](core/okteto-variables.mdx#configuring-dynamic-endpoints) are available within test section.


| Options       |   Type   | Description                                                                                                            | Default     |
| :------------ | :------: | :--------------------------------------------------------------------------------------------------------------------- | :---------- |
| _--file_      | (string) | The path to the manifest file                                                                                          | "okteto.yaml" |
| _--namespace_ | (string) | The namespace to use                                                                                                   | Current Okteto Namespace |
| _--name_      | (string) | The name of the development environment name to be deployed                                                            | |
| _--context_   | (string) | The context to use                                                                                                     | Current Okteto Context |
| _--deploy_    |  (bool)  | Force execution of the commands in the `deploy` section of the okteto manifest                                         | `false` |
| _--no-cache_  |  (bool)  | By default, test results are cached based on source files; use this option to skip the cache for tests dependent on external state, such as integration or end-to-end tests. | `false` |
| _--var_       |  (list)  | Set a pipeline variable (can be set more than once)                                                                    | |
| _--timeout_   | (duration) | The duration to wait for the development environment deployment to complete. Any value should contain a corresponding time unit e.g. 1s, 2m, 3h | 5m0s |


## Troubleshooting

### Kubernetes authentication

After you've ran `okteto kubeconfig` you should be able to communicate with the cluster through tools like `kubectl` and `helm`. If you are getting errors when trying to do so, you can use the `okteto kubetoken` command to troubleshoot the issue. This command is used internally as your [authentication plugin](https://kubernetes.io/docs/reference/access-authn-authz/authentication/#client-go-credential-plugins) against the cluster.

When running

```console
$ okteto kubetoken <okteto_url> <namespace> # example: okteto kubetoken https://okteto.example.com cindy
```

You should see a message like this:

```json
{
  "apiVersion": "client.authentication.k8s.io/v1",
  "metadata": {
    "creationTimestamp": null,
    "managedFields": [
      {
        "manager": "backend",
        "operation": "Update",
        "apiVersion": "authentication.k8s.io/v1",
        "time": "2023-03-01T13:18:48Z",
        "fieldsType": "FieldsV1",
        "fieldsV1": {
          "f:spec": {
            "f:expirationSeconds": {}
          }
        },
        "subresource": "token"
      }
    ]
  },
  "spec": {
    "audiences": ["<your-cluster-audience>"],
    "expirationSeconds": 1800,
    "boundObjectRef": null
  },
  "status": {
    "token": "<your.jwt.token>",
    "expirationTimestamp": "2023-03-01T13:48:48Z"
  }
}
```

If you are getting something else, you should be receiving an error message with guidance on how to follow up.
